# openapi/openapi.yaml
@@ -38,6 +38,7 @@ paths:
   /messages/{id}:
     patch:
       summary: Update message by id
+      operationId: PatchMessageById
       tags:
         - messages
       parameters:
@@ -64,6 +65,7 @@ paths:
                 $ref: "#/components/schemas/Message"
     delete:
       summary: Delete message by id
+      operationId: DeleteMessageById
       tags:
         - messages
       parameters:
@@ -77,6 +79,82 @@ paths:
       responses:
         "204":
           description: Message deleted successfully
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        "200":
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        "201":
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+  /users/{id}:
+    patch:
+      summary: Update user by id
+      operationId: PatchUserById
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+          description: Id of user to update
+      requestBody:
+        description: Data to update user
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        "200":
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+    delete:
+      summary: Delete user by id
+      operationId: DeleteUserById
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+          description: Id of user to delete
+      responses:
+        "204":
+          description: User deleted successfully
 
 components:
   schemas:
@@ -90,3 +168,13 @@ components:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
